[package]
name = "reexport"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Reexport js/ts files made easy with rust"
repository = "https://github.com/ErikMedeiros/reexport"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
